Fix sidebar not showing in mobile
+ Show logotype in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1490,7 +1490,6 @@ a:hover {
 
 .page-header__menu-btn {
     margin-right: 30px;
-    margin-bottom: -10px;
     display: none;
 }
 
@@ -1525,14 +1524,20 @@ a:hover {
 }
 
 .page-header__logo {
-    display: block;
-    position: relative;
-    margin-left: -4px;
+    color: #1f1f1f;
+    display: flex;
+    align-items: center;
+}
+
+.page-header__logo:hover {
+    color: #646464;
 }
 
 
 .page-header__logo img {
-    max-width: 30px;
+    position: relative;
+    top: -4px;
+    max-width: 28px;
     height: auto;
     margin-right: 12px;
 }
@@ -1540,7 +1545,6 @@ a:hover {
 .page-header__logo_text {
     font-weight: bold;
     position: relative;
-    top: 11px;
     font-size: 20px;
 }
 
@@ -4496,10 +4500,6 @@ body.dark-theme #modal-help ul li {
 
     .page-header__menu-btn {
         display: block;
-    }
-
-    .page-header__logo_text {
-        display: none;
     }
 
     .sidebar.is-show + .page-main {
